# cortex

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  compressor.rs  crystallizer.rs  git.rs  graph.rs  main.rs  memory.rs  model.rs  planner.rs  prefs.rs  search.rs  watcher.rs
src/mcp/: mod.rs  tools.rs
src/reasoner/: mod.rs  recurrent.rs  scratchpad.rs  simulator.rs
